# az-scout-plugin-latency-stats

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/az_scout_latency_stats/: __init__.py  _log.py  _zone_parsing.py  cloud63.py  inter_zone.py  intra_zone.py  latency.py  metadata.py  routes.py  tools.py
src/az_scout_latency_stats/data/: latency.csv
src/az_scout_latency_stats/static/css/: latency.css
src/az_scout_latency_stats/static/data/: region-coordinates.json
src/az_scout_latency_stats/static/html/: latency-tab.html
src/az_scout_latency_stats/static/js/: latency-tab-interzone.js  latency-tab-intra.js  latency-tab.js
tests/: test_cloud63.py  test_intra_zone.py  test_latency.py  test_plugin.py  test_routes.py  test_tools.py
