[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "az-scout-plugin-latency-stats"
dynamic = ["version"]
description = "Inter-region latency statistics plugin for az-scout"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "az-scout",
    "fastapi",
]

[project.urls]
Homepage = "https://github.com/lrivallain/az-scout-plugin-latency-stats"
Repository = "https://github.com/lrivallain/az-scout-plugin-latency-stats"
Issues = "https://github.com/lrivallain/az-scout-plugin-latency-stats/issues"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "httpx>=0.28",
]

[project.entry-points."az_scout.plugins"]
latency_stats = "az_scout_latency_stats:plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/az_scout_latency_stats"]

[tool.hatch.version]
source = "vcs"
raw-options.local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/az_scout_latency_stats/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/az_scout_latency_stats/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
